-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.12.4, 5.13.0
-
-
c89f7a221b7c31a0a4e1b0eed2e91d7633f4eab2
QML ListView via drag and drop.
Visual feedback when moving an item works different for the first item.
Attached a GIF and the minimal example producing the problem.
| For Gerrit Dashboard: QTBUG-78076 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 277652,2 | Fix a layout bug caused by a delegate item that was moved by the user | 5.13 | qt/qtdeclarative | Status: MERGED | +2 | 0 |